FEAT / Finishing the docs
